# cppsample

./: CMakeLists.txt  README.md  async.cpp  atomic.cpp  base.h  bind.cpp  booststr.cpp  build.ninja  chap10.pptx  chap16.pptx  chap28.pptx  chap28.txt  cppsample.pptx  cstd.cpp  ctor.cpp  datetime.cpp  debug.cpp  except.cpp  func.cpp  gsl.cpp  hello.cpp  i8n.cpp  init.cpp  klass.h  lain.cpp  makefile  mock.cpp  mock.h  move.cpp  procwidemutex.cpp  serialize.cpp  shared.cpp  string.cpp  sub.cpp  template.cpp  thread.cpp  threadcancel.cpp  vec.cpp  vectorentry.cpp  vtbl.cpp
mocktest/: base.cpp  base.h  mock.cpp  mock.h  sub.cpp  test.cpp
